# Generic-Music-Jam-Game-337

./: .gitignore  CMakeLists.txt  gl3w_gen.py
include/: Display.hpp  Entity.hpp  Input.hpp  Logic.hpp  LogicThread.hpp  Surface.hpp  Vect.hpp  my_opengl.hpp
shader/: rect.frag  rect.vert  texture.frag  texture.vert
source/: Display.cpp  Logic.cpp  LogicThread.cpp  gl3w.cpp  main.cpp  my_opengl.cpp
